# ido-services

./: .gitignore  Cargo.toml  README.md  dockerfile  gnosis-auction-services-td.json
.github/workflows/: deploy-develop.yaml  deploy-production.yaml  deploy.yaml  pull-request.yaml
contracts/: Cargo.toml  README.md  build.rs
contracts/artifacts/: AllowListOffChainManaged.json  DepositAndPlaceOrder.json  ERC20Mintable.json  EasyAuction.json  IERC20.json
contracts/src/: lib.rs
database/: flyway.conf
database/sql/: V001__signatures.sql
docker/: Dockerfile.binary  Dockerfile.migration  deploy.sh  startup.sh
e2e/: Cargo.toml
e2e/tests/: event_parsing.rs  ganache.rs
ecs/: auction-ankr-td.json  auction-gnosis-td.json  auction-goerli-td.json  auction-polygon-td.json
model/: Cargo.toml
model/src/: auction_details.rs  lib.rs  order.rs  signature_object.rs  user.rs
orderbook/: Cargo.toml
orderbook/src/: api.rs  database.rs  event_reader.rs  health.rs  lib.rs  main.rs  orderbook.rs  signatures.rs  subgraph.rs
orderbook/src/api/: filter.rs  handler.rs
orderbook/src/database/: signatures.rs
orderbook/src/subgraph/: http.rs  thegraph.rs  uniswap_graph_api.rs
tracing-setup/: Cargo.toml
