[package]
name = "e2e"
version = "1.0.0"
edition = "2018"

[dev-dependencies]
contracts = { path = "../contracts" }
hex-literal = "0.3"
hex = { version = "0.4", default-features = false }
ethcontract = { version = "0.12.2",  default-features = false, features = ["http"] }
model = { path = "../model" }
orderbook = { path = "../orderbook" }
secp256k1 = "0.20"
reqwest = "0.11"
tokio = { version = "1.8", features =[ "macros"] }
web3 = { version = "0.17", default-features = false }
serde_json = "1.0"
tracing-setup = { path = "../tracing-setup" }
float-cmp = "0.8.0"
futures = "0.3.14"
