[package]
name = "model"
version = "0.1.0"
authors = ["josojo <josojo@hotmail.de>"]
edition = "2018"


[dependencies]
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
primitive-types = { version = "0.8", features = ["fp-conversion"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
float-cmp = "0.8.0"
ethcontract = "0.11.1"




