[package]
name = "model"
version = "0.1.0"
authors = ["josojo <josojo@hotmail.de>"]
edition = "2018"


[dependencies]
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
anyhow = "1.0"
ethabi = "14.0"
primitive-types = { version = "0.9", features = ["fp-conversion"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
float-cmp = "0.8.0"
ethcontract = "0.12.2"
serde_json = "1.0.64"
web3 = { version = "0.16", default-features = false }





