[package]
name = "orderbook"
version = "0.1.0"
authors = ["josojo <josojo@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
model = { path = "../model" }
collection = "0.1.1"
tokio = { version = "0.2", features =[ "macros", "time"] }
tracing = "0.1"
tracing-setup = { path = "../tracing-setup" }
contracts = { path = "../contracts" }
primitive-types = { version = "0.7" }
structopt = { version = "0.3", default-features = false }
url = "2.2"
ethcontract = "0.9.1"
web3 = { version = "0.13", default-features = false, features = ["http-tls"] }
futures = "0.3.8"
lazy_static = "1.4"
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.2"


[dev-dependencies]
serde_json = "1.0"


