[package]
name = "orderbook"
version = "0.1.0"
authors = ["josojo <josojo@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
model = { path = "../model" }
collection = "0.1.1"
tokio = { version = "1.8", features =[ "macros", "time", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-setup = { path = "../tracing-setup" }
contracts = { path = "../contracts" }
primitive-types = { version = "0.9", features = ["fp-conversion"] }
structopt = { version = "0.3", default-features = false }
url = "2.2"
ethcontract = "0.12.2"
web3 = { version = "0.17", default-features = false, features = ["http-tls"] }
sqlx = { version = "0.5", default-features = false, features = ["bigdecimal", "chrono", "macros", "runtime-tokio-native-tls", "postgres"] }
futures = "0.3.8"
lazy_static = "1.4"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
ethabi = "14.0.0"
hex-literal = "0.3"
maplit = "1.0"
serde_json = "1.0"
thiserror = "1.0"
http = "0.2.4"


[dev-dependencies]
float-cmp = "0.8.0"


